--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@
     list-style-type: none;
   }
   .nav ul li a {
-    font-family: "Lufga";
+    font-family: "JetBrainsMonoNL";
     font-weight: 500;
     font-size: 2.8vh;
     color: white;
@@ -281,7 +281,7 @@
   }
   
   p {
-    font-family: "Lufga";
+    font-family: "JetBrainsMonoNL";
     color: white;
     font-size: 2.5vh;
     font-weight: normal;
@@ -431,7 +431,7 @@
   
   #footer .gradient-text {
     font-size: 1rem;
-    font-family: "Lufga";
+    font-family: "JetBrainsMonoNL";
     font-weight: 600;
     float: left;
   }
@@ -441,7 +441,7 @@
   }
   #footer span {
     font-size: 1rem;
-    font-family: "Lufga";
+    font-family: "JetBrainsMonoNL";
     text-align: left;
     margin: auto;
     width: 90%;
@@ -474,7 +474,7 @@
   textarea {
     color: white;
     font-size: 15px;
-    font-family: "Lufga";
+    font-family: "JetBrainsMonoNL";
     padding: 1rem;
     margin-bottom: 0.5rem;
     background-color: #ff5b1a18;
@@ -500,7 +500,7 @@
   #contact form label {
     font-size: 1.1rem;
     margin-bottom: 0.5rem;
-    font-family: "Lufga";
+    font-family: "JetBrainsMonoNL";
   }
   
   #message {
@@ -551,7 +551,7 @@
       margin-bottom: 10%;
     }
     .navmob ul li a {
-      font-family: "Lufga";
+      font-family: "JetBrainsMonoNL";
       font-weight: 500;
       font-size: 30px;
       color: white;
