--- a/assets/fonts/stylesheet.css
+++ b/assets/fonts/stylesheet.css
@@ -1,162 +1,127 @@
-@font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-BlackItalic.woff2') format('woff2'),
-        url('Lufga-BlackItalic.woff') format('woff');
-    font-weight: 900;
-    font-style: italic;
-    font-display: swap;
-}
 
+/* jetbrains */
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-BoldItalic.woff2') format('woff2'),
-        url('Lufga-BoldItalic.woff') format('woff');
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-Bold.woff2') format('woff2'),
-        url('Lufga-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-Black.woff2') format('woff2'),
-        url('Lufga-Black.woff') format('woff');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-ExtraLight.woff2') format('woff2'),
-        url('Lufga-ExtraLight.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-ExtraLight.ttf') format('ttf'),
+        url('JetBrainsMonoNL-ExtraLight.ttf') format('ttf');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-ExtraBoldItalic.woff2') format('woff2'),
-        url('Lufga-ExtraBoldItalic.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-ExtraBoldItalic.ttf') format('ttf'),
+        url('JetBrainsMonoNL-ExtraBoldItalic.ttf') format('ttf');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
-}
+} 
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-LightItalic.woff2') format('woff2'),
-        url('Lufga-LightItalic.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-LightItalic.ttf') format('ttf'),
+        url('JetBrainsMonoNL-LightItalic.ttf') format('ttf');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-Light.woff2') format('woff2'),
-        url('Lufga-Light.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-Light.ttf') format('ttf'),
+        url('JetBrainsMonoNL-Light.ttf') format('ttf');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-ExtraLightItalic.woff2') format('woff2'),
-        url('Lufga-ExtraLightItalic.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-ExtraLightItalic.ttf') format('ttf'),
+        url('JetBrainsMonoNL-ExtraLightItalic.ttf') format('ttf');
     font-weight: 200;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-ExtraBold.woff2') format('woff2'),
-        url('Lufga-ExtraBold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-ExtraBold.ttf') format('ttf'),
+        url('JetBrainsMonoNL-ExtraBold.ttf') format('ttf');
+    font-weight: 300;
+    font-style: italic;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-Italic.woff2') format('woff2'),
-        url('Lufga-Italic.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-Italic.ttf') format('ttf'),
+        url('JetBrainsMonoNL-Italic.ttf') format('ttf');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-Medium.woff2') format('woff2'),
-        url('Lufga-Medium.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-Medium.ttf') format('ttf'),
+        url('JetBrainsMonoNL-Medium.ttf') format('ttf');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-ThinItalic.woff2') format('woff2'),
-        url('Lufga-ThinItalic.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-ThinItalic.ttf') format('ttf'),
+        url('JetBrainsMonoNL-ThinItalic.ttf') format('ttf');
     font-weight: 100;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-MediumItalic.woff2') format('woff2'),
-        url('Lufga-MediumItalic.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-MediumItalic.ttf') format('ttf'),
+        url('JetBrainsMonoNL-MediumItalic.ttf') format('ttf');
     font-weight: 500;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-SemiBold.woff2') format('woff2'),
-        url('Lufga-SemiBold.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-SemiBold.ttf') format('ttf'),
+        url('JetBrainsMonoNL-SemiBold.ttf') format('ttf');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-Thin.woff2') format('woff2'),
-        url('Lufga-Thin.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-Thin.ttf') format('ttf'),
+        url('JetBrainsMonoNL-Thin.ttf') format('ttf');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-Regular.woff2') format('woff2'),
-        url('Lufga-Regular.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-Regular.ttf') format('ttf'),
+        url('JetBrainsMonoNL-Regular.ttf') format('ttf');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Lufga';
-    src: url('Lufga-SemiBoldItalic.woff2') format('woff2'),
-        url('Lufga-SemiBoldItalic.woff') format('woff');
+    font-family: 'JetBrainsMonoNL';
+    src: url('JetBrainsMonoNL-SemiBoldItalic.ttf') format('ttf'),
+        url('JetBrainsMonoNL-SemiBoldItalic.ttf') format('ttf');
     font-weight: 600;
     font-style: italic;
     font-display: swap;
 }
-
